fix/headerBG: z-index 1000

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,6 +6,7 @@
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 1000;
   background-color: var(--header-bg-color);
   box-shadow: 0px 5px 15px var(--shadow-color);
 }
